<resources>
    <string name="app_name">RKU Guide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutAyurvedic">Life is getting faster and faster day by day so as the rate of
        increment in unpredictable diseases around human beings. The number of remediless
        diseases is increasing with a higher rate. But there is a path through which these
        incurable diseases can be cured. In between the busy lifestyles, there exists a way
        through which the life, health, mind, body and heart remain free from unwanted damage,
        incurable diseases.
    </string>
    <string name="ayurvedicCourse">1. Bachelor Of Ayurvedic Medicine And Surgery</string>
    <string name="aboutAgriculture">It is a 4 year long Undergraduate Bachelor Degree programme.
        B. Sc. (Hons.) Agriculture programme consists of subjects such as Agronomy, Agricultural
        Meteorology, Soil Science, Genetics and Plant Breeding, Seed Science, Plant Pathology,
        Agriculture Entomology, Horticulture, Extension Education, Agricultural Economics,
        Agriculture Engineering, Agricultural Statistics, Animal and Poultry Management, Plant
        Biotechnology etc- The main aim of this programme is to train students to improve the
        agriculture sector in India, pave the way for future developments through research
        activities and transfer that research to farmers for increase production and sustainability.
        \nThis program aims at combining concepts of RESEARCH, EDUCATION and EXTENSION to boost
        the agricultural sector.
    </string>
    <string name="agricultureCourse">1. Bachelor Of Agriculture Science</string>
    <string name="aboutPhysio">The institute established in 2005, with broad mission and vision to
                develop excellence in health care profession. The institute was well known as a
                RK College of Physiotherapy, RK Group of Colleges, Rajkot affiliated to Saurashtra
                University, Rajkot and now famous as School of Physiotherapy, affiliated to
                RK University, Rajkot.The school is also recognized by the Indian Association of
                Physiotherapists (IAP), the IAP is a member organization of the World Confederation
                of Physical Therapy (WCPT). Well qualified faculties, advance technology in laboratories
                and large exposure to clinical setups remains first priority for the school.
    </string>
    <string name="physioCourse">1. BPT\n    (Bachelor of Physiotherapy)\n\n
                2. MPT\n    (Master of Physiotherapy)
    </string>
    <string name="aboutSOE">School of Engineering is one of the best degree engineering colleges
                in Gujarat state. School of Engineering is AICTE approved and located in a
                40 acre of lush-green campus on Rajkot-Bhavnagar highway at Rajkot, Gujarat. Earlier
                known as RK College of Engineering and Technology, the school envisage a world-class
                education system that assures quality and empowers the students to be the global 
                leaders of tomorrow. The school strives to bring excellence in the teaching-learning 
                process through continuous evaluation and training in educational pedagogy.
    </string>
    <string name="more">READ MORE</string>
    <string name="soeCourse">1. Mechanical Engineering\n    Diploma\n\n
                2. Civil Engineering\n    Diploma\n\n
                3. Computer Engineering\n    Diploma\n\n
                4. Electrical Engineering\n    Diploma\n\n
                5. Computer Engineering\n    Bachelor of Technology (B.Tech)\n\n
                6. Civil Engineering\n    Bachelor of Technology (B.Tech)\n\n
                7. Electrical Engineering\n    Bachelor of Technology (B.Tech)\n\n
                8. Information Technology\n    Bachelor of Technology (B.Tech)\n\n
                9. Mechanical Engineering\n      Bachelor of Technology (B.Tech)\n\n
                10. Computer Engineering\n      Master of Technology (M.Tech)\n\n
                11. Construction Technology\n      Master of Technology (M.Tech)\n\n
                12. Humanities And Applied Science\n\n
                13. Electrical Power System\n      Master of Technology (M.Tech)\n\n
                14. Machine Design\n      Master of Technology (M.Tech)\n\n
                15. Structural Engineering\n      Master of Technology (M.Tech)\n\n
                16. Thermal Sciences\n      Master of Technology (M.Tech)\n\n
                17. BCA\n      Bachelor of Computer Applications\n\n
                18. MCA\n      Master of Computer Applications
    </string>
    <string name="aboutSOM">School of Management started its journey offering MBA
                program in the year 2005 as RK College of Business Management.
                Since becoming a university in the year 2011, now the institution is known as
                School of Management, a constituent school of RK University, Rajkot.
    </string>
    <string name="somCourse">1. BBA\n    (Bachelor of Business Administration)\n\n
                2. B.Voc\n    (Bachelor of Vocational Studies)\n\n
                3. MBA\n    (Master of Business Administration)
    </string>
    <string name="aboutSOP">School of Pharmacy is engaged in imparting education of Bachelors,
                Masters and Doctorate degrees in Pharmacy. The school is a part of campus of
                RK University and houses 20 laboratories, 4 class rooms, auditorium, library with
                Wi-Fi network, learning resource centre, medicinal garden, museum, seminar hall,
                central instrumentation room, animal house and administrative area.
                The building is an architectural splendor with ultramodern amenities, specifically
                designed to suit the requirements of Pharmacy education.
    </string>
    <string name="sopCourse">1. Pharm D.\n     (Doctor Of Pharmacy)\n\n
                2. B.Pharm\n     (Bachelor Of Pharmacy)\n\n
                3. M.Pharm\n     (Master Of Pharmacy)
    </string>
    <string name="aboutSOS">RK University, formerly the RK Group of Colleges, is a leading
                University offering variety of courses ranging from Diploma studies to
                Doctorate research.\n\n
                Since its inception in the year of 2005, the RK group of Colleges has made a
                constant endeavour to provide quality education and a platform for overall development
                to its students. The journey from Group of Colleges to A State-Private University Status has
                been a daunting task with challenges and opportunities. It’s a collective and constant
                effort of RK family that we have scaled this height.
    </string>
    <string name="sosCourse">1. Diploma In Medical Laboratory Technology\n\n
                2. B.Sc Chemistry\n    (Bachelor Of Science)\n\n
                3. B.Sc Microbiology\n    (Bachelor Of Science)\n\n
                4. B.Sc Physics\n    (Bachelor Of Science)\n\n
                5. B.Sc Mathematics\n    (Bachelor Of Science)\n\n
                6. M.Sc Organic Chemistry\n    (Master Of Science)\n\n
                7. M.Sc Analytical Chemistry\n    (Master Of Science)\n\n
                8. M.Sc Microbiology\n    (Master Of Science)\n\n
                9. M.Sc Physics\n    (Master Of Science)
    </string>
    <string name="aboutAnalgadh">➠ This is an off beat location, a beautiful and peaceful attraction and one of
                the top places near Rajkot. Analgadh hill is a popular weekend getaway and an escape
                from the chaos of the city.  You can capture the sweeping views of the picture-perfect
                surroundings. You can also find an ancient Hindu temple where a number of devotees
                flock every year.
                \n\n➠ You can also explore top adventure activities including hiking, trekking and cycling
                besides engaging yourself in photography to capture the stunning greenery.
                \n\n➠ Location: Analgadh, Gujarat
                \n➠ Entry Fees: Free
                \n➠ Ideal for: Family and Kids
                \n➠ Opening hours: Anytime
    </string>
    <string name="aboutIshwariya">➠ Located in the city, Ishwariya Park is a popular place inaugurated
                in the year 2008. It is a 77 acre attraction that attracts a lot of tourists who
                can enjoy boating, picnic and multiple outdoor games. Best visited during autumn
                or spring season, if you are looking for a place to relax, then this is built for
                you! There is a water fountain, which is one of the major attraction inside the park.
                \n\n➠ Location: Rajkot, Gujarat 360006
                \n➠ Entry Fees: INR 10 for kids, INR 20 for adults
                \n➠ Ideal for: Picnic
                \n➠ Opening hours: 1 pm to 8 pm
    </string>
    <string name="aboutPraduman">➠ Located near Lalpari lake in Rajkot, this park is one of the famous places 
                in Rajkot. The park is spread across an area of 137 acres and offers many species 
                of animals and plants. If you are visiting Rajkot with your family, then you must 
                visit this place for a soul-satisfying experience.
                \n\n➠ Location: Pradhyuman Park, Rajkot, Gujarat 360003
                \n➠ Entry Fees: INR 10 for adults, INR 5 for children
                \n➠ Ideal for: Family outing
                \n➠ Opening hours: 9 am to 6 pm
    </string>
    <string name="aboutLalPari">➠ A few kilometres from Rajkot city is Lal Pari Lake, another picturesque
                locale that’s one of the most terrific picnic spots in Gujarat. It’s among the more
                popular tourist places near Rajkot as like Aji Dam, it attracts various migratory
                birds who put on quite a show.
                \n\n➠ Location: Navagam, Rajkot, Gujarat 360003
                \n➠ Entry Fees: Free
                \n➠ Ideal for: Leisure
                \n➠ Opening Hours: 9 am to 6 pm
    </string>
    <string name="prem_vadhavana">Prem Vadhavana</string>
    <string name="degree_c_e">Degree : C.E.</string>
    <string name="_21soece13078">21SOECE13078</string>
    <string name="pvadhavana117_rku_ac_in">pvadhavana117@rku.ac.in</string>
    <string name="tulsi_chhatriwala">Tulsi Chhatriwala</string>
    <string name="degree_i_t">Degree : I.T.</string>
    <string name="_21soeit13003">21SOEIT13003</string>
    <string name="tchhatriwala507_rku_ac_in">tchhatriwala507@rku.ac.in</string>
    <string name="naman_thakar">Naman Thakar</string>
    <string name="_21soeit13020">21SOEIT13020</string>
    <string name="nthakar715_rku_ac_in">nthakar715@rku.ac.in</string>
    <string name="darshit_chauhan">Darshit Chauhan</string>
    <string name="_21soeit13002">21SOEIT13002</string>
    <string name="dchauhan069_rku_ac_in">dchauhan069@rku.ac.in</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="back_to">Back To</string>
</resources>